Master: Fix get sdk version from config